# indexforge

./: .cursorrules  .djlintrc  .dockerignore  .flake8  .gitignore  .ide_instructions  .pre-commit-config.yaml  ANALYSIS.md  COMPLETED_MIGRATIONS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.kong  Dockerfile.ml  Dockerfile.ml-inference  Dockerfile.weaviate  LICENSE  MIGRATION_PLAN.md  MLServiceLayerRefactor2025Q1.md  README.md  REFACTOR.md  REQUIREMENTS.md  RESTRUCTURING_CHECKLIST.md  TEST_OUTCOMES.md  TODO.md  auth_implementation.md  build.sh  codebase_structure.md  communication_schema.json  docker-compose.yml  fulltest_tree.json  import_analysis.md  import_analysis.txt  microservices_improvement_plan.md  migrations_checklist.md  mkdocs.yml  new_migrations.md  performance_analysis.md  pyproject.toml  pyproject_analysis.md  pytest_migration.md  (+13 more)
.github/workflows/: ci.yml
backup/config_backup_20250117/: render.yaml
backup/source_tracking_backup_20250117/: logging_manager.py  reliability.py  source_tracker.py  storage.py  tenant_source_tracker.py  utils.py
backup/source_tracking_backup_20250117/metrics/: <Mock id='5918456400'>_test_source_metrics.json  <Mock id='6285416656'>_test_source_metrics.json
backup/weaviate/: query_builder.py  search_executor.py  vector_index.py  weaviate.py  weaviate_repo.py
custom_logs/: pipeline.json
docs/: ARCHITECTURE.md  SCHEMA.md  api_reference.md  current_weaviate_implementation.md  index.md  metrics_and_performance.md  phase1_kong_api_gateway.md  phase2_service_boundary_realignment.md  phase3_observability_enhancement.md  phase4_event_driven_architecture.md  phase5_security_enhancements.md  testing_standards.md  weaviate_migration_checklist.md  weaviate_migration_report.md
docs/api/: document_tracking.md  endpoints.md  lineage.md  models.md  processing_steps.md
docs/api/storage/: README.md
docs/api_reference/: ALERTS.md
docs/architecture/: ADR-001-ServiceBoundaries.md  ArchitecturalGuidelines.md  tracking.md
docs/backup/: BACKUP_VERIFICATION.md
docs/dependencies/: SOURCE_TRACKING_DEPENDENCIES.md
docs/design/storage/: DECISIONS.md
docs/diagrams/: architecture.md  component_interactions.md  error_handling.md
docs/examples/storage/: README.md
docs/migration/: COMPLETED_MIGRATIONS.md
grafana/provisioning/dashboards/: dashboards.yaml  istio-mesh-overview.json  kong-auth.json  kong-errors.json  kong-health.json  kong-overview.json  kong-performance.json  kong-resources.json  kong-security.json  kong-traffic.json  kong.json
grafana/provisioning/datasources/: prometheus.yaml
istio/config/: authorization-policies.yaml  mtls-policy.yaml  network-policy.yaml
migrations/: 001_create_profiles.sql
prometheus/: prometheus.yml
prometheus/rules/: service-specific-alerts.yml
scripts/: check_prerequisites.sh  common.sh  deploy_istio.sh  setup_dev.sh  test_istio.sh
src/: __init__.py  index_google_workspace.py  main.py
src/api/: __init__.py  app.py  exceptions.py  main.py
src/config/: __init__.py  settings.py
src/configuration/: log_validation.py  logger_setup.py
src/connectors/: __init__.py  documentation.py  notion_connector.py
src/core/: __init__.py  base.py  container.py  errors.py  interfaces.py  metrics.py  models.py  settings.py
src/cross_reference/: __init__.py  cross_reference_manager.py  models.py
src/docs/: api_reference.md  configuration.md  documentation_readme.md
src/embeddings/: embedding_generator.py
src/indexing/: document_manager.py  search_manager.py  vector_index.py
src/ml/: __init__.py  embeddings.py  exceptions.py  processing.py  search.py  service.py
src/models/: __init__.py  settings.py
src/pipeline/: __init__.py  context.py  core.py  document_ops.py  errors.py  parameters.py  search.py
src/services/: __init__.py  base.py  factory.py  redis.py  weaviate.py
src/template/: __init__.py  environment.py
src/utils/: __init__.py  cache_manager.py  document_processing.py  embedding_generator.py  monitoring.py  pii_detector.py  summarizer.py  text_processing.py  topic_clustering.py  vault_manager.py  vector_index.py
src_backup/: index_google_workspace.py  main.py
src_backup/api/: app.py
src_backup/configuration/: log_validation.py  logger_setup.py
src_backup/connectors/: __init__.py
src_backup/core/: errors.py  interfaces.py  metrics.py  models.py
src_backup/cross_reference/: __init__.py  models.py
src_backup/indexing/: index.py  operations.py  schema_manager.py
src_backup/ml/: embeddings.py  search.py
src_backup/pipeline/: context.py  search.py  steps.py
src_backup/services/: factory.py
src_backup/template/: environment.py
src_backup/utils/: cache_manager.py  document_processing.py  embedding_generator.py  monitoring.py  pii_detector.py  summarizer.py  text_processing.py  topic_clustering.py  vector_index.py
supabase/: config.toml
tests/: README.md  conftest.py  utils.py
tests/docker/: README.md  REFACTORING_TODO.md  conftest.py
tests/fixtures/: __init__.py  constants.py  documents.py  fixture_responsibilities.md  mock_fixtures.md  processing.py  schema.py  summarizer.py
tests/integration/: IMPLEMENTATION_CHECKLIST.md  README.md  TEST_OUTCOMES.md  conftest.py  test_concurrent_processing.py  test_istio_mesh.py  test_pipeline_performance.py  test_processors.py
tests/performance/: cleanup_test_env.py  conftest.py  run_comparison.py  run_migration_tests.py  run_tests.py  setup_test_env.py  test_analysis.py  test_performance.py  test_service_performance.py  utils.py  weaviate_performance_test.py
tests/performance/performance_comparator/: README.md  __init__.py  data_loader.py  main.py  metrics_comparator.py  pyproject.toml  report_generator.py
tests/render/: conftest.py
tests/services/: test_document_retrieval_service.py  test_file_upload_service.py  test_statistics_service.py
tests/test_messaging/: __init__.py  conftest.py  test_rabbitmq_connection.py
tests/unit/: pytest.ini  test_main.py  test_run_pipeline.py
tests/utils/: __init__.py  assertions.py  constants.py  helpers.py  mocks.py  test_utils.py
vault/config/: vault.hcl
(+1263 files in other folders)
